examples/test/testpolicy19887.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19887
  namespace: namespace483
spec:
  podSelector:
    matchLabels:
      key27: value33
      key22: value41
      key47: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value19
          key8: value19
          key40: value47
      podSelector:
        matchLabels:
          key25: value38
          key42: value49
          key3: value17
